infrastructure/controllers/prod-k3s-proxmox/victoria-metrics-k8s-stack/http-route-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - grafana.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
